Mais notas sobre o capítulo 1